# health-tracker-bot

./: .env.example  .gitignore  README.md  TODO.md  alembic.ini  pyproject.toml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/scripts/: gen-fixtures.mjs
docker/: Dockerfile.tg_bot  Dockerfile.web_server  docker-compose.yml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 0001_initial_schema.py  83cd912e052f_initial_tables.py  d290dbb9a82b_add_water_entries.py
src/app/: admin.py  config.py  crypto.py  database.py  dependencies.py  main.py  redis.py  security.py
src/app/api/: __init__.py  auth.py  exercise.py  food.py  food_search.py  measurement.py  profile.py  records.py  stats.py  water.py
src/app/models/: __init__.py  exercise.py  food.py  measurement.py  record.py  session.py  user.py  water.py
src/app/schemas/: auth.py  exercise.py  food.py  measurement.py  record.py  user.py  water.py
src/app/services/: exercise.py  food.py  food_db.py  stats.py  tdee.py  user.py  water.py
src/app/static/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/app/static/css/: style.css
src/app/static/js/: api.js  app.js  charts.js  telegram.js
src/app/static/src/: api.ts  app.ts  auth.ts  carousel.ts  crypto.ts  datepicker.ts  modal.ts  nav.ts  records.ts  router.ts  session.ts  stats.ts  swipe.ts  (+2 more)
src/bot/: config.py  main.py  notify.py
src/bot/handlers/: start.py
(+61 files in other folders)
