[project]
name = "trackhub"
version = "0.1.0"
description = "Telegram Mini App для трекинга здоровья"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiogram>=3.16.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "argon2-cffi>=23.1.0",
]

[tool.uv.workspace]
members = []

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
